--- a/webtest/platinumchart.html
+++ b/webtest/platinumchart.html
@@ -7,8 +7,11 @@
     <script src="https://cdn.staticfile.org/react/16.4.0/umd/react.development.js"></script>
     <script src="https://cdn.staticfile.org/react-dom/16.4.0/umd/react-dom.development.js"></script>
     <script src="https://cdn.staticfile.org/babel-standalone/6.26.0/babel.min.js"></script>
+    <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.js"></script>
     <script type="text/babel" src="js/platinumchart.js"></script>
-    <link href="css/style.css" rel="stylesheet" type="text/css" /> 
+    <link href="css/style-common.css" rel="stylesheet" type="text/css" /> 
+    <link href="css/style-dark.css" rel="stylesheet" type="text/css" /> 
+    <link href="css/style-white.css" rel="stylesheet" type="text/css" /> 
 </head>
 <body>
     <div id="root"></div>
